# gtb

./: .chktexrc  .gitignore  CITATION.cff  ILLUSTRATIONS.md  LICENSE  README.md  about_the_authors.md  bash.sh  convert_math_blocks.py  cover.md  main.tex  make_cover.py  make_favicon.py  myst.yml  pyproject.toml  references.bib  requirements.txt
.github/workflows/: build.yml  deploy.yml  latexcheck.yml  spellcheck.yml  staticcheck.yml  tests.yml
appendices/absorbing_markov_chains/: index.md  main.md
appendices/ergodic_markov_chains/: index.md  main.md
appendices/evolutionary_biology/: main.md
appendices/integer_pivoting/: index.md  main.md
appendices/interior_point_optimisation/: index.md  main.md
appendices/numerical_integration/: index.md  main.md
appendices/order_statistics/: index.md
chapters/auction_games/: README.md  index.md  main.md
chapters/backwards_induction/: README.md
chapters/best_response_polytopes/: README.md  index.md  main.md
chapters/best_responses/: README.md
chapters/cooperative_games/: README.md  index.md  main.md
chapters/direct_reciprocity/: index.md  main.md
chapters/dominance/: README.md
chapters/emergence_of_cooperation/: README.md
chapters/evolutionary_biology/: index.md  main.md
chapters/evolutionary_game_theory_the_asymmetric_replicator_dynamics_equation/: README.md
chapters/evolutionary_game_theory_the_replicator_dynamics_equation/: README.md
public/: custom.css
tests/: test_palette.py  test_worked_examples.py
tex/: gtbtikz.tex
typst_book/: myst-imports.typ  style.typ  template.yml
(+114 files in other folders)
